--- a/CSS/acceuil.css
+++ b/CSS/acceuil.css
@@ -2,7 +2,6 @@ img
 {
     width: 80px;
     height: 70px;
-
 }
 
 header
@@ -18,6 +17,7 @@ header
     margin: 10px 20px 10px 20px;
     padding: 5px;
     background:aliceblue;
+    font-family:Corbel;
 }
 
 .hautdepage
@@ -34,70 +34,70 @@ margin :5px;
 {
     width: 30px;
     height: 35px;
-
-}
-.titre
-{
-
-}
-
-.menu
-{
-
-}
-
-h1
-{
-
-
-}
-
-.partiun
-{
-
-
 }
 
 h4
 {
     text-align: center;
     font-size: 30px;
+    font-family: Corbel
 }
 
 p
 {
     text-align: center;
     font-size: 20px;
+    font-family: Corbel
 }
 
 body
 {
-    background: ;
+    display: flex;
+    min-height: 100vh;
+    margin: 0;
+    flex-direction: column;
+    background-color: #50b9d7;
+}
 
 
+.site-footer
+ {
+    flex: 1;
+ }
 
-
-
+body, html
+{
+    height: 100%;
+    overflow: hidden;
 }
 
 .liens
- {
-    text-align: center;
- }
-
-footer
 {
-    background: darkgrey;
-    position: fixed;
+    text-align: center;
+}
+
+.conect
+{
+    display: flex;
+    justify-content: center;
+    height: 65%;
+    flex-direction: column;
 }
 
 .copyright
 {
+    display: flex;
+    justify-content:center;
     text-align: center;
-
+    width: 100%;
+    align-content: flex-end;
+    color: white;
 }
 
-
-
+footer
+{
+    position: relative;
+    background-color: black;
+}
 
 
