--- a/CSS/inscription.css
+++ b/CSS/inscription.css
@@ -4,6 +4,7 @@
     justify-content: center;
     text-align: center;
     color: grey;
+    height: 65%;
 }
 
 
@@ -17,7 +18,7 @@ body
     background: linear-gradient(white,#bdf89c);
     background-repeat: no-repeat ;
     font-size: larger;
-
+    height: 100%;
 }
 
 input
